# Interactive-Dynamics-Physics-Simulations-Optimized

./: README.md
code/: CMakeLists.txt  Dependencies.cmake  cases.c  cases.h  constraint_type.c  constraint_type.h  custom_assert.h  main.c  math.c  math.h  matrixn.c  matrixn.h  simulator.c  simulator.h  symdiff.c  symdiff.h  test.c  test_matrixn.c  test_symdiff_matrix.c  test_symdiff_node.c  test_utils.h
code/cmake/: CPM.cmake
